# CS131-Compiler

./: .gitignore  README.md
PA1-Lexer/: apt.txt
PA1-Lexer/src/: cool.flex
PA2-Parser/src/: cool.y
PA3-Semant/: CMakeLists.txt  apt.txt
PA3-Semant/TestCases/: arith.cl  bad.cl
PA3-Semant/src/: cool-tree.h  semant.cc  semant.h
PA4-Cgen/: CMakeLists.txt
PA4-Cgen/src/: Makefile  RunStd.py  cgen-phase.cc  cgen.cc  cgen.h  cool-tree.h  exec.py
